@@ -97,6 +97,9 @@ CHANGES
      __tablename__, __table_args__, etc. now works if
      the method references attributes on the ultimate 
      subclass. [ticket:1749]
+    
+   - relationships and columns with foreign keys aren't 
+     allowed on declarative mixins, sorry.  [ticket:1751]
      
 0.6beta2
 ========
